# rust-image-weight-reducer

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs
