[package]
name = "rust-minimize-images-quality-by-dir"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
image = "0.24.6"
filetime = "0.2"
filetime_creation = "0.1"
libc = "0.2.153"
chrono = "0.4.33"
time = "0.3.34"

[profile.release]
lto = "fat"
